# kismet

./: .codespellrc  .gitignore  .gitmodules  CHANGELOG  CHANGELOG-OLD  CMakeLists.txt  FAQ  GPL  Kismet-20181205-14-55-02-1.kismet  Kismet-20181205-15-11-12-1.kismet  Kismet-20181205-15-13-10-1.kismet  Kismet-20181205-15-13-10-1.kismet-journal  Kismet-20181205-15-47-32-1.kismet  Kismet-20181205-15-47-32-1.kismet-journal  Kismet-20181205-19-53-08-1.kismet  Kismet-20181205-19-53-08-1.kismet-journal  Kismet-20181205-19-56-48-1.kismet  Kismet-20181205-19-56-48-1.kismet-journal  Kismet-20181221-22-24-01-1.kismet  Kismet-20181221-22-50-51-1.kismet  LICENSE  Makefile.in  Makefile.inc.in  README  README.DEV.DATASOURCE  README.DEV.RESTAPI  README.OLD  README.SSL  README.appletv  README.md  README.newcore  README.win32  README2  RELEASENOTES.txt  RESTAPI  SERIALIZATION  TIMESTAMP  TODO  VERSION  adsb_icao.cc  (+677 more)
.github/: FUNDING.yml
bluetooth_parsers/: bt_rfinfo.cc  bt_rfinfo.h  btle.cc  btle.h
boost/: asio.hpp  json.hpp
capture_antsdr_droneid/: Makefile.in  capture_antsdr_droneid.c
capture_bladerf_wiphy/: Makefile.in  capture_bladerf_wiphy.c
capture_bt_geiger/: Makefile.in  setup.py
capture_catsniffer_zigbee/: Makefile.in  README.md  capture_catsniffer_zigbee.c  catsniffer_zigbee.h
capture_freaklabs_zigbee/: Makefile.in  README  kismet_cap_freaklabs_zigbee  setup.py
capture_freaklabs_zigbee_v2/: Makefile.in  capture_freaklabs_zigbee_v2.c
capture_hak5_wifi_coconut/: Makefile.in  capture_hak5_coconut.c
capture_hak5_wifi_coconut/libwifiuserspace/: CMakeLists.txt
capture_hak5_wifi_coconut/libwifiuserspace/firmware/: LICENSE-ralink-mediatek.txt
capture_hak5_wifi_coconut/libwifiuserspace/kernel/: average.h  bitops.h  bits.h  cfg80211.c  cfg80211.h  crc_ccit.c  crc_ccit.h  endian.h  etherdevice.h  ieee80211.h  ieee80211_radiotap.h  if_ether.h  kernel.h  le_byteshift.h  log2.h  mac80211.h  nl80211.h  stddef.h  types.h  usb.h
capture_hak5_wifi_coconut/libwifiuserspace/rt2800usb/: rt2800.h  rt2800lib.c  rt2800lib.h  rt2800usb.c  rt2800usb.h  rt2x00.c  rt2x00.h  rt2x00lib.h  rt2x00mac.c  rt2x00queue.h  rt2x00reg.h  rt2x00usb.c  rt2x00usb.h
capture_hak5_wifi_coconut/libwifiuserspace/userspace/: userspace.c  userspace.h
capture_linux_bluetooth/: Makefile.in  README.md  bluez-monitor  bluez-monitor.c  capture_linux_bluetooth.c  linux_bt_rfkill.c  linux_bt_rfkill.h
capture_linux_wifi/: Makefile.in  capture_linux_wifi.c  linux_netlink_control.c  linux_netlink_control.h  linux_nexmon_control.c  linux_nexmon_control.h  linux_wireless_control.c  linux_wireless_control.h  linux_wireless_rfkill.c  linux_wireless_rfkill.h  nl80211.h
capture_nrf_51822/: Makefile.in  capture_nrf_51822.c  capture_nrf_51822.c.bak  kismet_cap_nrf_51822  nrf_51822.h
capture_nrf_52840/: Makefile.in  capture_nrf_52840.c  kismet_cap_nrf_52840  nrf_52840.h
capture_nrf_mousejack/: Makefile.in  capture_nrf_mousejack.c  mousejack.h  nrf.c
capture_nxp_kw41z/: Makefile.in  capture_nxp_kw41z.c  nxp_kw41z.h
capture_openbsd_wifi/: Makefile.in  capture_openbsd_wifi.c
capture_osx_corewlan_wifi/: Makefile.in  capture_osx_corewlan_wifi.c  capture_osx_corewlan_wifi.m  corewlan_bridge.swift
capture_proxy_adsb/: setup.py
capture_radiacode/: Makefile.in  capture_radiacode_usb.c  radiacode.c  radiacode.h
capture_rtl_433/: kismet_sdr_rtl433
capture_rz_killerbee/: Makefile.in  capture_rz_killerbee.c  kismet_cap_rz_killerbee  rz_killerbee.h
capture_sdr_rtl433/: Makefile.in  README  kismet_cap_sdr_rtl433  kismet_cap_sdr_rtl433.py  setup.py  (+1 more)
dev-plugin-rtl433/: capture_rtl433.c  configure  configure.ac
kismet-devel/: CHANGELOG  FAQ  Makefile.in  README  TIMESTAMP  TODO  airsnortdump.cc  airsnortdump.h  alertracker.cc  alertracker.h  capturesourceutil.cc  capturesourceutil.h  config.h.bot  config.h.in  configfile.cc  configfile.h  configure  configure.in  cursesfront.cc  cursesfront.h  displaynetworksort.h  dronesource.cc  dronesource.h  dumpfile.h  expat.cc  expat.h  fifodump.cc  fifodump.h  finitestate.cc  finitestate.h  frontend.cc  frontend.h  genericsource.cc  genericsource.h  getopt.cc  getopt.h  gpsd.cc  gpsd.h  gpsdump.cc  gpsdump.h  (+64 more)
kismet-devel/conf/: ap_manuf  kismet.conf  kismet.conf.in  kismet_drone.conf  kismet_ui.conf  kismet_ui.conf.in  zaurus_kismet.conf  zaurus_kismet_ui.conf
kismet-devel/docs/: CARD.wsp100  DEVEL.client  DEVEL.ipmap  README.arm  README.bsd  README.compiling  README.config  README.cygwin  README.extras  README.generic  README.gpsmap  README.html  README.panel  README.pcap
kismet-devel/extra/: cwgd2gpsdrive.sh  gpsxml-sanitize.cc  kismet-1.6.2.dtd  kismet-2.9.1.dtd  kismet-gps-1.0.dtd  kismet-gps-2.9.1.dtd  kismet2xml.cc  kismetcsv.sql  multi-gpsmap.sh
kismet-devel/extra/buzzme/: Makefile.in
kismet-devel/libpcap-0.7.2/: CHANGES  INSTALL.txt  bpf_image.c  config.h.in  configure  configure.in  ethertype.h  grammar.y  nlpid.h  optimize.c  pcap-bpf.c  pcap-int.h  pcap-linux.c  pcap-namedb.h  pcap-pf.h  pcap-snit.c  pcap.c  pcap.h  ppp.h  savefile.c  scanner.l
kismet-devel/libpcap-0.7.2/bpf/net/: bpf.h
kismet-devel/libpcap-2002.12.23/: CHANGES  Makefile.in  arcnet.h  atmuni31.h  bpf_image.c  config.h.in  configure.in  etherent.c  ethertype.h  fad-getad.c  fad-win32.c  gencode.c  gencode.h  grammar.y  inet.c  nametoaddr.c  optimize.c  pcap-bpf.c  pcap-dlpi.c  pcap-namedb.h  pcap-nit.c  pcap-nit.h  pcap-null.c  pcap-pf.h  pcap-snit.c  pcap-snoop.c  pcap-stdinc.h  pcap-win32.c  pcap.c  pcap.h  savefile.c  sll.h
kismet-devel/libpcap-2002.12.23/SUNOS4/: nit_if.o.sun4c.4.0.3c
kismet-devel/libpcap-2002.12.23/Win32/Include/: Gnuc.h
kismet-devel/libpcap-2002.12.23/Win32/Src/: getaddrinfo.c
kismet-devel/libpcap-2002.12.23/lbl/: os-aix4.h  os-osf5.h  os-solaris2.h  os-sunos4.h
kismet-devel/man/: gpsmap.1  kismet.1  kismet.conf.5  kismet_drone.1  kismet_drone.conf.5  kismet_hopper.1  kismet_monitor.1  kismet_ui.conf.5
kismet-devel/packaging/ipkg/CONTROL/: control
kismet-devel/scripts/: gpsmap-helper-earthamaps  kismet.in  kismet_monitor.in  kismet_unmonitor.in
(+1289 files in other folders)
