cmake_minimum_required(VERSION 3.5)
project(kismet)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
        alertracker.cc
        base64.cc
        battery.cc
        channeltracker2.cc
        clinetframework.cc
        configfile.cc
        cygwin_utils.cc
        datasourcetracker.cc
        devicetracker.cc
        devicetracker_drone.cc
        drone_kisnetframe.cc
        dumpfile_alert.cc
        dumpfile.cc
        dumpfile_devicetracker.cc
        dumpfile_drone.cc
        dumpfile_gpsxml.cc
        dumpfile_nettxt.cc
        dumpfile_netxml.cc
        dumpfile_pcap.cc
        dumpfile_string.cc
        dumpfile_tuntap.cc
        entrytracker.cc
        filtercore.cc
        finitestate.cc
        getopt.cc
        globalregistry.cc
        gpsfake.cc
        gpsgpsd2.cc
        gps_manager.cc
        gpsserial2.cc
        gpsweb.cc
        ifcontrol.cc
        ipc_remote2.cc
        ipc_remote.cc
        iwcontrol.cc
        kis_clinetframe.cc
        kis_datasource.cc
        kis_dissector_ipdata.cc
        kis_dlt.cc
        kis_dlt_ppi.cc
        kis_dlt_prism2.cc
        kis_dlt_radiotap.cc
        kis_gps.cc
        kis_httpd_websession.cc
        kismet_capture.cc
        kismet_client.cc
        kismet_drone.cc
        kismet_json.cc
        kismet_server.cc
        kis_netframe.cc
        kis_net_microhttpd.cc
        madwifing_control.cc
        manuf.cc
        messagebus.cc
        msgpack_adapter.cc
        multiconfig.cc
        netframework.cc
        nl80211_control.cc
        packet.cc
        packetchain.cc
        packetsource_airpcap.cc
        packetsource_bsdrt.cc
        packetsource_ipwlive.cc
        packetsource_pcap.cc
        packetsourcetracker.cc
        packetsource_wext.cc
        phy_80211.cc
        phy_80211_dissectors.cc
        pipeclient.cc
        plugintracker.cc
        psutils.cc
        ringbuf2.cc
        ringbuf.cc
        ringbuf_handler.cc
        serialclient2.cc
        statealert.cc
        system_monitor.cc
        tcpclient2.cc
        tcpclient.cc
        tcpserver.cc
        test64.cc
        test.cc
        text_cliframe.cc
        timetracker.cc
        trackedelement.cc
        util.cc
        xmlserialize_adapter.cc
        )
        add_executable(kismet ${SOURCE_FILES})
